# rust-bot

./: .env  Cargo.toml  README.md  config.toml  main.db
api_params/: data_sample.json
api_params /: data_sample.json  headers_sample.json  log.json
src/: api.rs  bot.rs  codes.txt  config.rs  controller.rs  main.rs
tables/: table_3Ztx7nJB.xlsx  table_FS7Zxi48.xlsx
