[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
qrcode = "0.13.0"
rand = "0.8.5"
image = "0.24.8"
