[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
qrcode = "0.13.0"
rand = "0.8.5"
image = "0.24.8"
anyhow = "1.0.80"
regex = "1.10.3"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.5.9"
signal-hook = "0.3.17"
tempdir = "0.3.7"
env_logger = "0.7.1"
secrecy = { version = "0.8.0", features = ["serde"] }
rusqlite = { version = "0.28.0", features = ["chrono", "bundled"] }
rusqlite_migration = "1.0.0"
xdg = "2.4.1"
base64 = "0.21.7"
hyper = "1.1.0"
reqwest = { version = "0.11.24", features = ["json", "cookies"]}
serde_json = "1.0.114"